--- a/ejemploDataTable.html
+++ b/ejemploDataTable.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" src="comandosccss.css">
 </head>
 <body>
     <table id="example" class="hover" style="width:100%">
@@ -489,9 +490,11 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
-<link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css"/>
 <script>
-    new DataTable('#example');
+   new DataTable('#example', {
+    scrollX: true,
+    scrollY: 200
+});
 </script>
 
 </html>
